Fix Contrast Errors - AA Status

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -273,7 +273,6 @@ a:hover {
 .map iframe {
   width: 334px;
   height: 880px;
-  /*border-radius: 6px;*/
   border: none;
   margin: 10px -50px 0 -50px;
   padding: 0;
@@ -282,7 +281,6 @@ a:hover {
 .contact-main {
   width: 66.67%;
   padding: 25px 50px 50px 50px;
-  /*background-color: #f0f8ff;*/
 }
 
 /* Team Section */
@@ -385,7 +383,7 @@ label.contact-subscribe {
 
 .contact-form button {
   background-color: var(--accent1-color);
-  color: white;
+  color: var(--primary-color);
   font-size: 1.1rem;
   font-weight: bold;
   padding: 12px;
